# HexLife

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  HEXAGONAL_BLOCK_ENTROPY_IMPLEMENTATION.md  LICENSE  README.md  config.js  embed-demo.html  eslint.config.js  index.html  main.js  package-lock.json  package.json  renderer.js  server.py  simulation.js  style.css  test_hex_block_entropy.js  tsconfig.json  ui.js  utils.js  vertex.glsl  vite.config.js  vitest.config.js  webglUtils.js
.github/workflows/: deploy.yml  release.yml
devvit/: .gitattributes  biome.jsonc  devvit.json  package-lock.json  package.json  readme.md
devvit/public/: chrome.css  game.html  splash.html
devvit/scripts/: build-client.mjs  clean.mjs
docs/: DEVVIT-PLAN.md  EMBED-PLAN.md  EXPLORE-STAGE2-POPULATION-PLAN.md  EXPLORE-STAGE3-PROMPT-SEARCH-PLAN.md  PLAY-LAYER-PLAN.md  SUBREDDIT-PLAYBOOK.md  TOTALISTIC-MODE-PLAN.md  UI-REWORK-HANDOFF.md  UX-IMPROVEMENTS-PLAN.md
hexlife-wasm/: Cargo.toml  build.rs
hexlife-wasm/src/: lib.rs
public/: llms.txt
shaders/: fragment.glsl  quad_fragment.glsl  quad_vertex.glsl  vertex.glsl
src/: main.js  version.js
src/core/: AppContext.js  Application.js  AutoExploreService.js  EmbeddingWorker.js  ExploreSessionCoordinator.js  RulesetService.js  ScrubHistoryController.js  StateHistoryRing.js  Symmetry.js  ThumbnailBakeService.js  WorldCodec.d.ts  WorldCodec.js  WorldManager.js  WorldProxy.js  WorldWorker.js  colorPalettes.js  config.js  gridMath.js  hexBrush.js  neighbor-dirs.json  rng.js  rulesetDescriptor.d.ts  rulesetDescriptor.js  rulesetHex.js  rulesetName.d.ts  rulesetName.js  simulation.js  tags.js
src/docs/: EventBus.MD
src/embed/: EmbedRenderer.js  EmbedSim.js  HexLifeElement.js  api.d.ts  api.js  attrs.js  hexlife-world.d.ts  index.js
src/rendering/: canvasLoader.js  renderer.js  webglUtils.js
src/services/: CaptureService.js  EmbeddingService.js  EventBus.js  GifRecorder.js  InitialStateCodec.js  LibraryPackCodec.js  PersistenceService.js  RedditShareService.js  SettingsLoader.js  ShareCodec.js  (+2 more)
tests/: autoExploreDeterminism.test.js  autoExploreTarget.test.js  behaviorArchive.test.js  captureService.test.js  devvitBoundary.test.js  embedAttributes.test.js  embeddingArchive.test.js  embeddingNovelty.test.js  embeddingService.test.js  eventbus.test.js  exploreConfig.test.js  exploreDisclosure.test.js  firstRunView.test.js  gpuSupport.test.js  hexBrush.test.js  initialStateCodec.test.js  interestingnessBenchmark.test.js  interestingnessScore.test.js  libraryCardActions.test.js  libraryController.test.js  libraryPackCodec.test.js  neighborDirs.test.js  onboardingSpotlight.test.js  persistenceEmbeddingGallery.test.js  persistenceSavedStates.test.js  predictionMode.test.js  redditShareService.test.js  rng.test.js  ruleVizUtils.test.js  rulesetDescriptor.test.js  rulesetService.test.js  savedStrategy.test.js  scoringPresets.test.js  settingsLoader.test.js  shareCodec.test.js  stateFile.test.js  stateHistoryRing.test.js  stateLibraryService.test.js  symmetry.test.js  tagSuggestions.test.js  (+8 more)
(+188 files in other folders)
