[package]
name = "hexlife-wasm"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib for the wasm-pack build; rlib so `cargo test` can link a native test harness for the
# pure-logic unit tests in lib.rs (the tick engine compiles & runs fine off-wasm).
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2" # The core dependency for JS interop

# Optimize the release (and therefore wasm-pack) build for runtime speed. Matters most at the
# `huge` grid preset (383k cells x 9 worlds). LTO + a single codegen unit let the optimizer inline
# across the hot tick loop.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1